--- a/www/photographer.html
+++ b/www/photographer.html
@@ -17,6 +17,7 @@
         <button class="logo" title="logo" onclick="document.location.href='index.html'">
     <img src=" ./img/logo/logo.svg" alt="logo">
 </button>
+
             <article class="photographerArticle">
   <div class="imgNameContainer">
     <div class="imgContainer">
@@ -27,22 +28,25 @@
       Mimi Keel
     </h2>
   </div>
-  <p class="location">
-    London,UK
-  </p>
-  <p class="tagline">
-    Voir le beau dans le quotidien
-  </p>
-  <p class="price">
-    400€/jour
-  </p>
-  <nav class="photographerNav">
-    <button href="#" class="filterLink">#portrait</button>
-      <button href="#" class="filterLink">#events</button>
-        <button href="#" class="filterLink">#travel</button>
-          <button href="#" class="filterLink">#animals</button>
-  </nav>
+  <button class="btContact btContact-desktop">
+    Contactez-moi</button>
+    <p class="location">
+      London,UK
+    </p>
+    <p class="tagline">
+      Voir le beau dans le quotidien
+    </p>
+    <p class="price">
+      400€/jour
+    </p>
+    <nav class="photographerNav">
+      <button href="#" class="filterLink">#portrait</button>
+        <button href="#" class="filterLink">#events</button>
+          <button href="#" class="filterLink">#travel</button>
+            <button href="#" class="filterLink">#animals</button>
+    </nav>
 </article>
+
     </header>
     <main class="photographerMain">
         <section class="photographerSection">
@@ -78,7 +82,7 @@
     </div>
 </section>
     </main>
-    <button class="btContactMobile">
+    <button class="btContact btContact-mobile">
     Contactez-moi</button>
 
 
