--- a/src/pages/photographer/photographer.html
+++ b/src/pages/photographer/photographer.html
@@ -10,49 +10,49 @@
     <link rel="stylesheet" href="css/photographer.css" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+    <script src="js/photographer.js" defer></script>
 </head>
 
 <body>
     <header>
         <%- include("../../components/logo/logo.html") %>
-
-            <%- include("./layouts/photographerArticle/photographerArticle.html", {
-                imgLink:"./img/Mimi/Portrait_Nora.jpg", className : "mimi" , nom : "Mimi Keel" , location: "London,UK" ,
-                tagline: "Voir le beau dans le quotidien" , price: "400€/jour" }); %>
-
     </header>
 
-
-    <label for="select">Trier par</label>
-    <div class="select" tabindex="0" id="select">
-
-        <!-- Ce containeur sera utilisé pour afficher la valeur courante du widget -->
-        <span class="value">Popularité</span>
-
-        <!-- Ce conteneur contiendra toutes les options disponibles pour le widget.
-             Comme c'est une liste, il y sens à utiliser l'élément ul. -->
-        <ul class="optList">
-            <!-- Chaque option ne contient que la valeur à afficher, Nous verrons plus loin
-               comment gérer la valeur réelle qui sera envoyée avec les données du formulaire -->
-            <li class="option">Popularité</li>
-            <li class="option">Date</li>
-            <li class="option">Titre</li>
-        </ul>
-
-    </div>
-
-    <!-- <label for="selectBy">Trier par</label>
-    <select name="selectBy" id="selectBy">
-        <option value="Popularité">Popularité</option>
-        <option value="Date">Date</option>
-        <option value="Titre">Titre</option>
-    </select> -->
-
     <main class="photographerMain">
-        <%- include("./layouts/photographerSection/photographerSection.html", { className: "animalRainbow" ,
-            imgLink:"./img/Mimi/Animals_Rainbow.jpg" , imgTitle:"Arc-en-ciel", price:"70€" , like: "12" }) %>
-            <%- include("./layouts/photographerSection/photographerSection.html", { className: "travelLonesome"
-                ,imgLink:"./img/Mimi/Travel_Lonesome.jpg" ,imgTitle:"Solitude", price:"70€" , like: "12" }) %>
+        <%- include("./layouts/photographerArticle/photographerArticle.html", { imgLink:"./img/Mimi/Portrait_Nora.jpg",
+            className : "mimi" , nom : "Mimi Keel" , location: "London,UK" , tagline: "Voir le beau dans le quotidien" ,
+            price: "400€/jour" }); %>
+
+            <div class="no-widget" id="widget">
+                <label for="select" onclick=toggleOptList(select)>Trier par</label>
+                <form>
+                    <select name="Popularité">
+                        <option>Popularité</option>
+                        <option>Date</option>
+                        <option>Titre</option>
+                    </select>
+                    <div class="select" tabindex="0" id="select" role="listbox">
+                        <!-- Ce containeur sera utilisé pour afficher la valeur courante du widget -->
+                        <span class="value">Popularité</span>
+                        <!-- Ce conteneur contiendra toutes les options disponibles pour le widget.
+             Comme c'est une liste, il y sens à utiliser l'élément ul. -->
+                        <ul class="optList hidden" role="presentation">
+                            <!-- Chaque option ne contient que la valeur à afficher, Nous verrons plus loin
+               comment gérer la valeur réelle qui sera envoyée avec les données du formulaire -->
+                            <li class="option" role="option">Popularité</li>
+                            <li class="option" role="option">Date</li>
+                            <li class="option" role="option">Titre</li>
+                        </ul>
+                    </div>
+                </form>
+            </div>
+
+            <article class="photoArticle">
+                <%- include("./layouts/photographerSection/photographerSection.html", { className: "animalRainbow" ,
+                    imgLink:"./img/Mimi/Animals_Rainbow.jpg" , imgTitle:"Arc-en-ciel", price:"70€" , like: "12" }) %>
+                    <%- include("./layouts/photographerSection/photographerSection.html", { className: "travelLonesome"
+                        ,imgLink:"./img/Mimi/Travel_Lonesome.jpg" ,imgTitle:"Solitude", price:"70€" , like: "12" }) %>
+            </article>
     </main>
     <%- include("../../components/btContact/btContact.html", { className:"btContact btContact-mobile"}) %>
 
