fix(index.html): lien img

--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
         <article class="indexArticle">
   <button class="photographerLink" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
-        <img src="./../img/Mimi/Portrait_Nora.jpg" class="mimi" alt="" cover />
+        <img src="./img/Mimi/Portrait_Nora.jpg" class="mimi" alt="" cover />
     </div>
 
     <h2>
@@ -61,7 +61,7 @@
             <article class="indexArticle">
   <button class="photographerLink" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
-        <img src="./../img/Ellie/Architecture_Horseshoe.jpg" class="ellie" alt="" cover />
+        <img src="./img/Ellie/Architecture_Horseshoe.jpg" class="ellie" alt="" cover />
     </div>
 
     <h2>
@@ -88,7 +88,7 @@
                 <article class="indexArticle">
   <button class="photographerLink" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
-        <img src="./../img/Tracy/Fashion_Urban_Jungle.jpg" class="tracy" alt="" cover />
+        <img src="./img/Tracy/Fashion_Urban_Jungle.jpg" class="tracy" alt="" cover />
     </div>
 
     <h2>
@@ -115,7 +115,7 @@
                     <article class="indexArticle">
   <button class="photographerLink" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
-        <img src="./../img/Nabeel/Travel_Outdoor_Baths.jpg" class="nabeel" alt="" cover />
+        <img src="./img/Nabeel/Travel_Outdoor_Baths.jpg" class="nabeel" alt="" cover />
     </div>
 
     <h2>
@@ -142,7 +142,7 @@
                         <article class="indexArticle">
   <button class="photographerLink" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
-        <img src="./../img/Rhode/Fashion_Melody_Red_on_Stripes.jpg" class="rhode" alt="" cover />
+        <img src="./img/Rhode/Fashion_Melody_Red_on_Stripes.jpg" class="rhode" alt="" cover />
     </div>
 
     <h2>
@@ -169,7 +169,7 @@
                             <article class="indexArticle">
   <button class="photographerLink" onclick="document.location.href='photographer.html'">
     <div class="imgContainer">
-        <img src="./../img/Marcel/Travel_Tower.jpg" class="marcel" alt="" cover />
+        <img src="./img/Marcel/Travel_Tower.jpg" class="marcel" alt="" cover />
     </div>
 
     <h2>
