--- a/www/photographer.html
+++ b/www/photographer.html
@@ -83,9 +83,7 @@
         <p class="imgTitle">
             Arc-en-ciel
         </p>
-        <p class="price">
-            70€
-        </p>
+
         <p class="like">
             12
         </p>
@@ -99,9 +97,21 @@
         <p class="imgTitle">
             Solitude
         </p>
-        <p class="price">
-            70€
+
+        <p class="like">
+            12
         </p>
+    </div>
+</section>
+                        <section class="photographerSection">
+    <button class="imgContainer" onclick="openLightbox()">
+        <img class="travelLonesome" src="./img/Mimi/Travel_Lonesome.jpg" alt="" cover>
+    </button>
+    <div class="infoContainer">
+        <p class="imgTitle">
+            Solitude
+        </p>
+
         <p class="like">
             12
         </p>
