--- a/www/index.html
+++ b/www/index.html
@@ -6,194 +6,197 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/index.css" />
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/index.css" />
     <script src="./js/index.js" defer type="module"></script>
 </head>
 
 <body>
-    <header>
-        <button class="logo" title="logo" onclick="document.location.href='index.html'">
+
+    <header class="header">
+  <button class="logo" title="logo" onclick="document.location.href='index.html'">
     <img src=" ./img/logo/logo.svg" alt="logo">
-</button>
-            <button href="#" class="photographersLink">Nos photographes</button>
-            <nav class="indexNav">
-  <button href="#" class="filterLink">#Portrait</button>
-    <button href="#" class="filterLink">#Art</button>
-      <button href="#" class="filterLink">#Fashion</button>
-        <button href="#" class="filterLink">#Architecture</button>
-          <button href="#" class="filterLink">#Travel</button>
-            <button href="#" class="filterLink">#Sport</button>
-              <button href="#" class="filterLink">#Animals</button>
-                <button href="#" class="filterLink">#Events</button>
-</nav>
-    </header>
-    <main>
-        <article class="indexArticle">
+  </button>
+  <button href="#" class="photographersLink">Nos photographes</button>
+  <nav class="indexNav">
+    <button href="#" class="filterLink">#Portrait</button>
+      <button href="#" class="filterLink">#Art</button>
+        <button href="#" class="filterLink">#Fashion</button>
+          <button href="#" class="filterLink">#Architecture</button>
+            <button href="#" class="filterLink">#Travel</button>
+              <button href="#" class="filterLink">#Sport</button>
+                <button href="#" class="filterLink">#Animals</button>
+                  <button href="#" class="filterLink">#Events</button>
+  </nav>
+</header>
+
+        <main>
+            <article class="photographerDescription">
+
   <button class="photographerLink" onclick="document.location.href='photographer.html'">
-    <div class="imgContainer">
-        <img src="./img/Mimi/Portrait_Nora.jpg" class="mimi" alt="" cover />
+    <div class="photographerDescriptionImgContainer">
+      <img src="./img/Mimi/Portrait_Nora.jpg" class="mimi" alt="" cover />
     </div>
-
     <h2>
-        Mimi Keel
+      Mimi Keel
     </h2>
-</button>
+  </button>
 
-    <p class="location">
-      London,UK
-    </p>
-    <p class="tagline">
-      Voir le beau dans le quotidien
-    </p>
-    <p class="price">
-      400€/jour
-    </p>
-    <nav>
-      <button href="#" class="filterLink">#portrait</button>
-        <button href="#" class="filterLink">#events</button>
-          <button href="#" class="filterLink">#travel</button>
-            <button href="#" class="filterLink">#animals</button>
-    </nav>
+  <p class="location">
+    London,UK
+  </p>
+  <p class="tagline tagline_photographerPages">
+    Voir le beau dans le quotidien
+  </p>
+  <p class="price">
+    400€/jour
+  </p>
+  <nav>
+    <button href="#" class="filterLink">#portrait</button>
+      <button href="#" class="filterLink">#events</button>
+        <button href="#" class="filterLink">#travel</button>
+          <button href="#" class="filterLink">#animals</button>
+  </nav>
 </article>
-            <article class="indexArticle">
+                <article class="photographerDescription">
+
   <button class="photographerLink" onclick="document.location.href='photographer.html'">
-    <div class="imgContainer">
-        <img src="./img/Ellie/Architecture_Horseshoe.jpg" class="ellie" alt="" cover />
+    <div class="photographerDescriptionImgContainer">
+      <img src="./img/Ellie/Architecture_Horseshoe.jpg" class="ellie" alt="" cover />
     </div>
-
     <h2>
-        Ellie-Rose Wilkens
+      Ellie-Rose Wilkens
     </h2>
-</button>
+  </button>
 
-    <p class="location">
-      Paris,France
-    </p>
-    <p class="tagline">
-      Capturer des compositions complexes
-    </p>
-    <p class="price">
-      250€/jour
-    </p>
-    <nav>
-      <button href="#" class="filterLink">#portrait</button>
-        <button href="#" class="filterLink">#events</button>
-          <button href="#" class="filterLink">#travel</button>
-            <button href="#" class="filterLink">#animals</button>
-    </nav>
+  <p class="location">
+    Paris,France
+  </p>
+  <p class="tagline tagline_photographerPages">
+    Capturer des compositions complexes
+  </p>
+  <p class="price">
+    250€/jour
+  </p>
+  <nav>
+    <button href="#" class="filterLink">#portrait</button>
+      <button href="#" class="filterLink">#events</button>
+        <button href="#" class="filterLink">#travel</button>
+          <button href="#" class="filterLink">#animals</button>
+  </nav>
 </article>
-                <article class="indexArticle">
+                    <article class="photographerDescription">
+
   <button class="photographerLink" onclick="document.location.href='photographer.html'">
-    <div class="imgContainer">
-        <img src="./img/Tracy/Fashion_Urban_Jungle.jpg" class="tracy" alt="" cover />
+    <div class="photographerDescriptionImgContainer">
+      <img src="./img/Tracy/Fashion_Urban_Jungle.jpg" class="tracy" alt="" cover />
     </div>
-
     <h2>
-        Tracy Galindo
+      Tracy Galindo
     </h2>
-</button>
+  </button>
 
-    <p class="location">
-      Montreal,Canada
-    </p>
-    <p class="tagline">
-      Photographe freelance
-    </p>
-    <p class="price">
-      500€/jour
-    </p>
-    <nav>
-      <button href="#" class="filterLink">#portrait</button>
-        <button href="#" class="filterLink">#events</button>
-          <button href="#" class="filterLink">#travel</button>
-            <button href="#" class="filterLink">#animals</button>
-    </nav>
+  <p class="location">
+    Montreal,Canada
+  </p>
+  <p class="tagline tagline_photographerPages">
+    Photographe freelance
+  </p>
+  <p class="price">
+    500€/jour
+  </p>
+  <nav>
+    <button href="#" class="filterLink">#portrait</button>
+      <button href="#" class="filterLink">#events</button>
+        <button href="#" class="filterLink">#travel</button>
+          <button href="#" class="filterLink">#animals</button>
+  </nav>
 </article>
-                    <article class="indexArticle">
+                        <article class="photographerDescription">
+
   <button class="photographerLink" onclick="document.location.href='photographer.html'">
-    <div class="imgContainer">
-        <img src="./img/Nabeel/Travel_Outdoor_Baths.jpg" class="nabeel" alt="" cover />
+    <div class="photographerDescriptionImgContainer">
+      <img src="./img/Nabeel/Travel_Outdoor_Baths.jpg" class="nabeel" alt="" cover />
     </div>
-
     <h2>
-        Nabeel Bradford
+      Nabeel Bradford
     </h2>
-</button>
+  </button>
 
-    <p class="location">
-      Mexico City,Mexico
-    </p>
-    <p class="tagline">
-      Toujours aller de l'avant
-    </p>
-    <p class="price">
-      350€/jour
-    </p>
-    <nav>
-      <button href="#" class="filterLink">#portrait</button>
-        <button href="#" class="filterLink">#events</button>
-          <button href="#" class="filterLink">#travel</button>
-            <button href="#" class="filterLink">#animals</button>
-    </nav>
+  <p class="location">
+    Mexico City,Mexico
+  </p>
+  <p class="tagline tagline_photographerPages">
+    Toujours aller de l'avant
+  </p>
+  <p class="price">
+    350€/jour
+  </p>
+  <nav>
+    <button href="#" class="filterLink">#portrait</button>
+      <button href="#" class="filterLink">#events</button>
+        <button href="#" class="filterLink">#travel</button>
+          <button href="#" class="filterLink">#animals</button>
+  </nav>
 </article>
-                        <article class="indexArticle">
+                            <article class="photographerDescription">
+
   <button class="photographerLink" onclick="document.location.href='photographer.html'">
-    <div class="imgContainer">
-        <img src="./img/Rhode/Fashion_Melody_Red_on_Stripes.jpg" class="rhode" alt="" cover />
+    <div class="photographerDescriptionImgContainer">
+      <img src="./img/Rhode/Fashion_Melody_Red_on_Stripes.jpg" class="rhode" alt="" cover />
     </div>
-
     <h2>
-        Rhode Dubois
+      Rhode Dubois
     </h2>
-</button>
+  </button>
 
-    <p class="location">
-      Barcelona,Spain
-    </p>
-    <p class="tagline">
-      Je crée des souvenirs
-    </p>
-    <p class="price">
-      275€/jour
-    </p>
-    <nav>
-      <button href="#" class="filterLink">#portrait</button>
-        <button href="#" class="filterLink">#events</button>
-          <button href="#" class="filterLink">#travel</button>
-            <button href="#" class="filterLink">#animals</button>
-    </nav>
+  <p class="location">
+    Barcelona,Spain
+  </p>
+  <p class="tagline tagline_photographerPages">
+    Je crée des souvenirs
+  </p>
+  <p class="price">
+    275€/jour
+  </p>
+  <nav>
+    <button href="#" class="filterLink">#portrait</button>
+      <button href="#" class="filterLink">#events</button>
+        <button href="#" class="filterLink">#travel</button>
+          <button href="#" class="filterLink">#animals</button>
+  </nav>
 </article>
-                            <article class="indexArticle">
+                                <article class="photographerDescription">
+
   <button class="photographerLink" onclick="document.location.href='photographer.html'">
-    <div class="imgContainer">
-        <img src="./img/Marcel/Travel_Tower.jpg" class="marcel" alt="" cover />
+    <div class="photographerDescriptionImgContainer">
+      <img src="./img/Marcel/Travel_Tower.jpg" class="marcel" alt="" cover />
     </div>
-
     <h2>
-        Marcel Nikolic
+      Marcel Nikolic
     </h2>
-</button>
+  </button>
 
-    <p class="location">
-      Berlin,Germany
-    </p>
-    <p class="tagline">
-      Toujours à la recherche de LA photo
-    </p>
-    <p class="price">
-      300€/jour
-    </p>
-    <nav>
-      <button href="#" class="filterLink">#portrait</button>
-        <button href="#" class="filterLink">#events</button>
-          <button href="#" class="filterLink">#travel</button>
-            <button href="#" class="filterLink">#animals</button>
-    </nav>
+  <p class="location">
+    Berlin,Germany
+  </p>
+  <p class="tagline tagline_photographerPages">
+    Toujours à la recherche de LA photo
+  </p>
+  <p class="price">
+    300€/jour
+  </p>
+  <nav>
+    <button href="#" class="filterLink">#portrait</button>
+      <button href="#" class="filterLink">#events</button>
+        <button href="#" class="filterLink">#travel</button>
+          <button href="#" class="filterLink">#animals</button>
+  </nav>
 </article>
-    </main>
+        </main>
 </body>
 
 </html>
