--- a/www/photographer.html
+++ b/www/photographer.html
@@ -7,75 +7,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fisheye - photographe</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css" />
-    <link rel="stylesheet" href="css/photographer.css" type="text/css">
+    <link rel="stylesheet" href="css/index.css" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-    <script src="js/photographer.js" defer></script>
+    <script src="js/app.js" defer></script>
 </head>
 
 <body>
-    <header>
-        <button class="logo" title="logo" onclick="document.location.href='index.html'">
+    <header class="header header-photographer">
+  <button class="logo" title="logo" onclick="document.location.href='index.html'">
     <img src=" ./img/logo/logo.svg" alt="logo">
-</button>
-    </header>
+  </button>
+  <button href="#" class="photographersLink">Nos photographes</button>
+  <nav class="indexNav">
+    <button href="#" class="filterLink">#Portrait</button>
+      <button href="#" class="filterLink">#Art</button>
+        <button href="#" class="filterLink">#Fashion</button>
+          <button href="#" class="filterLink">#Architecture</button>
+            <button href="#" class="filterLink">#Travel</button>
+              <button href="#" class="filterLink">#Sport</button>
+                <button href="#" class="filterLink">#Animals</button>
+                  <button href="#" class="filterLink">#Events</button>
+  </nav>
+</header>
 
-    <main class="photographerMain">
-        <article class="photographerArticle">
-  <div class="imgNameContainer">
-    <div class="imgContainer">
-      <img src="./img/Mimi/Portrait_Nora.jpg" class="mimi" alt="" cover />
-    </div>
+        <main>
+            <article class="photographerDescription photographerDescription-photographer">
 
-    <h2>
-      Mimi Keel
-    </h2>
+  <div class="photographerDescriptionImgContainer">
+    <img src="./img/Mimi/Portrait_Nora.jpg" class="mimi" alt="" cover />
   </div>
+
+  <h2>
+    Mimi Keel
+  </h2>
+
+
+  <p class="location">
+    London,UK
+  </p>
+  <p class="tagline">
+    Voir le beau dans le quotidien
+  </p>
+
+  <nav>
+    <button href="#" class="filterLink">#portrait</button>
+      <button href="#" class="filterLink">#events</button>
+        <button href="#" class="filterLink">#travel</button>
+          <button href="#" class="filterLink">#animals</button>
+  </nav>
   <button class="btContact btContact-desktop">
     Contactez-moi</button>
-    <p class="location">
-      London,UK
-    </p>
-    <p class="tagline">
-      Voir le beau dans le quotidien
-    </p>
-    <p class="price">
-      400€/jour
-    </p>
-    <nav class="photographerNav">
-      <button href="#" class="filterLink">#portrait</button>
-        <button href="#" class="filterLink">#events</button>
-          <button href="#" class="filterLink">#travel</button>
-            <button href="#" class="filterLink">#animals</button>
-    </nav>
 </article>
 
-            <div class="no-widget" id="widget">
-                <label for="select" onclick=toggleOptList(select)>Trier par</label>
-                <form>
-                    <select name="Popularité">
-                        <option>Popularité</option>
-                        <option>Date</option>
-                        <option>Titre</option>
-                    </select>
-                    <div class="select" tabindex="0" id="select" role="listbox">
-                        <!-- Ce containeur sera utilisé pour afficher la valeur courante du widget -->
-                        <span class="value">Popularité</span>
-                        <!-- Ce conteneur contiendra toutes les options disponibles pour le widget.
-             Comme c'est une liste, il y sens à utiliser l'élément ul. -->
-                        <ul class="optList hidden" role="presentation">
-                            <!-- Chaque option ne contient que la valeur à afficher, Nous verrons plus loin
-               comment gérer la valeur réelle qui sera envoyée avec les données du formulaire -->
-                            <li class="option" role="option">Popularité</li>
-                            <li class="option" role="option">Date</li>
-                            <li class="option" role="option">Titre</li>
-                        </ul>
-                    </div>
-                </form>
-            </div>
+                <div class="no-widget" id="widget">
+  <label for="select" onclick=toggleOptList(select)>Trier par</label>
+  <form>
+    <select name="Popularité">
+      <option>Popularité</option>
+      <option>Date</option>
+      <option>Titre</option>
+    </select>
+    <div class="select" tabindex="0" id="select" role="listbox">
+      <!-- Ce containeur sera utilisé pour afficher la valeur courante du widget -->
+      <span class="value">Popularité</span>
+      <!-- Ce conteneur contiendra toutes les options disponibles pour le widget.
+Comme c'est une liste, il y sens à utiliser l'élément ul. -->
+      <ul class="optList hidden" role="presentation">
+        <!-- Chaque option ne contient que la valeur à afficher, Nous verrons plus loin
+comment gérer la valeur réelle qui sera envoyée avec les données du formulaire -->
+        <li class="option" role="option">Popularité</li>
+        <li class="option" role="option">Date</li>
+        <li class="option" role="option">Titre</li>
+      </ul>
+    </div>
+  </form>
+</div>
 
-            <article class="photoArticle">
-                <section class="photographerSection">
+                    <section class="mediaCardsSection">
+                        <section class="mediaCard">
     <button class="imgContainer" onclick="openLightbox()">
         <img class="animalRainbow" src="./img/Mimi/Animals_Rainbow.jpg" alt="" cover>
     </button>
@@ -89,7 +99,7 @@
         </p>
     </div>
 </section>
-                    <section class="photographerSection">
+                            <section class="mediaCard">
     <button class="imgContainer" onclick="openLightbox()">
         <img class="travelLonesome" src="./img/Mimi/Travel_Lonesome.jpg" alt="" cover>
     </button>
@@ -103,7 +113,7 @@
         </p>
     </div>
 </section>
-                        <section class="photographerSection">
+                                <section class="mediaCard">
     <button class="imgContainer" onclick="openLightbox()">
         <img class="travelLonesome" src="./img/Mimi/Travel_Lonesome.jpg" alt="" cover>
     </button>
@@ -117,12 +127,19 @@
         </p>
     </div>
 </section>
-            </article>
-    </main>
-    <button class="btContact btContact-mobile">
+                    </section>
+        </main>
+
+        <button class="btContact btContact-mobile">
     Contactez-moi</button>
-
-
+            <aside>
+  <p class="like">
+    297091
+  </p>
+  <p class="price">
+    300€ / jour
+  </p>
+</aside>
 </body>
 
 </html>
