--- a/www/photographer.html
+++ b/www/photographer.html
@@ -57,7 +57,8 @@
           <button href="#" class="filterLink">#animals</button>
   </nav>
   <button class="btContact btContact-desktop">
-    Contactez-moi</button>
+    Contactez moi
+</button>
 </article>
 
                 <div class="no-widget" id="widget">
@@ -131,7 +132,8 @@ comment gérer la valeur réelle qui sera envoyée avec les données du formulai
         </main>
 
         <button class="btContact btContact-mobile">
-    Contactez-moi</button>
+    Contactez moi
+</button>
             <aside>
   <p class="like">
     297091
@@ -140,6 +142,36 @@ comment gérer la valeur réelle qui sera envoyée avec les données du formulai
     300€ / jour
   </p>
 </aside>
+
+
+                <div class="bground">
+  <div class="content">
+
+    <span class="close"></span>
+    <div class="modal-body">
+      <h1>Contactez-moi <br>
+        Mimi Keel</h1>
+      <form name="reserve" action="index.html" method="get">
+        <div class="formData">
+          <label for="first">Prénom</label><br />
+          <input class="text-control" type="text" id="first" name="first" /><br />
+        </div>
+        <div class="formData">
+          <label for="last">Nom</label><br />
+          <input class="text-control" type="text" id="last" name="last" /><br />
+        </div>
+        <div class="formData">
+          <label for="email">E-mail</label><br />
+          <input class="text-control" type="email" id="email" name="email" /><br />
+        </div>
+        <button class="btContact btContact-mobile btContact-mobile-modal">
+    Envoyer
+</button>
+          <!-- <input class="btn-submit" type="submit" class="button" value="C'est parti" /> -->
+      </form>
+    </div>
+  </div>
+</div>
 </body>
 
 </html>
