--- a/www/photographer.html
+++ b/www/photographer.html
@@ -35,7 +35,7 @@
             <article class="photographer-card photographer-card-big">
 
   <div class="photographer-card-link-imgContainer photographer-card-big-imgContainer">
-    <img src="./img/PhotographersIDPhotos/MimiKeel.jpg" class="mimi" alt="" cover />
+    <img src="./img/PhotographersIDPhotos/MimiKeel.jpg" alt="" cover />
   </div>
 
   <h2>
