--- a/www/photographer.html
+++ b/www/photographer.html
@@ -15,34 +15,30 @@
 
 <body>
     <header class="header header-photographer">
-  <button class="logo" title="logo" onclick="document.location.href='index.html'">
+  <button class="logo" title="logo" alt="Fisheye Home Page">
     <img src=" ./img/logo/logo.svg" alt="logo">
   </button>
   <button href="#" class="photographersLink">Nos photographes</button>
-  <nav class="indexNav">
-    <button href="#" class="filterLink">#Art</button>
-    <button href="#" class="filterLink">#Fashion</button>
-    <button href="#" class="filterLink">#Architecture</button>
-    <button href="#" class="filterLink">#Travel</button>
-    <button href="#" class="filterLink">#Sport</button>
-    <button href="#" class="filterLink">#Animals</button>
-    <button href="#" class="filterLink">#Events</button>
-    <button href="#" class="filterLink">#Portrait</button>
+  <nav>
+    <button href="#" class="tags tags-link">#Art</button>
+    <button href="#" class="tags tags-link">#Fashion</button>
+    <button href="#" class="tags tags-link">#Architecture</button>
+    <button href="#" class="tags tags-link">#Travel</button>
+    <button href="#" class="tags tags-link">#Sport</button>
+    <button href="#" class="tags tags-link">#Animals</button>
+    <button href="#" class="tags tags-link">#Events</button>
+    <button href="#" class="tags tags-link">#Portrait</button>
   </nav>
 </header>
 
         <main>
             <article class="photographer-card photographer-card-big">
-
   <div class="photographer-card-link-imgContainer photographer-card-big-imgContainer">
     <img src="./img/PhotographersIDPhotos/MimiKeel.jpg" alt="" cover />
   </div>
-
   <h2>
     Mimi Keel
   </h2>
-
-
   <p class="location">
     London,UK
   </p>
