Feat(lobby): réglages

--- a/www/photographer.html
+++ b/www/photographer.html
@@ -18,7 +18,7 @@
   <button class="logo" title="logo" alt="Fisheye Home Page">
     <img src=" ./img/logo/logo.svg" alt="logo">
   </button>
-  <button href="#" class="photographersLink">Nos photographes</button>
+  <h1 class="lobbyH1">Nos photographes</h1>
   <nav>
     <button href="#" class="tags tags-link">#Art</button>
     <button href="#" class="tags tags-link">#Fashion</button>
@@ -52,8 +52,8 @@
     <button href="#" class="filterLink">#Architecture</button>
     <button href="#" class="filterLink">#Travel</button>
   </nav>
-  <button class="btContact btContact-desktop" type="button">
-    Contactez moi
+  <button class=btContact btContact-desktop type=button>
+        Contactez moi
 </button>
 </article>
 
@@ -127,8 +127,8 @@ comment gérer la valeur réelle qui sera envoyée avec les données du formulai
                     </section>
         </main>
 
-        <button class="btContact btContact-mobile" type="button">
-    Contactez moi
+        <button class=btContact btContact-mobile type=button>
+        Contactez moi
 </button>
             <aside>
   <p class="like">
@@ -165,11 +165,11 @@ comment gérer la valeur réelle qui sera envoyée avec les données du formulai
           <label for="message" class="message">Votre message</label>
           <textarea class="text-area text-control" id="message" name="message" rows="10" cols="38"></textarea>
         </div>
-        <button class="btContact btContact-mobile btContact-mobile-modal" type="submit">
-    Envoyer
+        <button class=btContact btContact-mobile btContact-mobile-modal type=submit>
+        Envoyer
 </button>
-          <button class="btContact btContact-desktop btContact-desktop-modal" type="submit">
-    Envoyer
+          <button class=btContact btContact-desktop btContact-desktop-modal type=submit>
+        Envoyer
 </button>
       </form>
     </div>
