--- a/www/photographer.html
+++ b/www/photographer.html
@@ -1,3 +1,4 @@
+,
 <!DOCTYPE html>
 <html lang="fr">
 
@@ -82,7 +83,7 @@ comment gérer la valeur réelle qui sera envoyée avec les données du formulai
 </div>
 
                     <section id="mediaCardsSection">
-                        <section class="mediaCard">
+  <article class="mediaCard">
     <button class="imgContainer" onclick="openLightbox()">
         <img class="animalRainbow" src="./img/Mimi/Animals_Rainbow.jpg" alt="" cover>
     </button>
@@ -90,13 +91,12 @@ comment gérer la valeur réelle qui sera envoyée avec les données du formulai
         <p class="imgTitle">
             Arc-en-ciel
         </p>
-
-        <p class="like">
+        <button class="like">
             12
-        </p>
+        </button>
     </div>
-</section>
-                            <section class="mediaCard">
+</article>
+    <article class="mediaCard">
     <button class="imgContainer" onclick="openLightbox()">
         <img class="travelLonesome" src="./img/Mimi/Travel_Lonesome.jpg" alt="" cover>
     </button>
@@ -104,27 +104,14 @@ comment gérer la valeur réelle qui sera envoyée avec les données du formulai
         <p class="imgTitle">
             Solitude
         </p>
-
-        <p class="like">
+        <button class="like">
             12
-        </p>
+        </button>
     </div>
+</article>
+      // etc...
 </section>
-                                <section class="mediaCard">
-    <button class="imgContainer" onclick="openLightbox()">
-        <img class="travelLonesome" src="./img/Mimi/Travel_Lonesome.jpg" alt="" cover>
-    </button>
-    <div class="infoContainer">
-        <p class="imgTitle">
-            Solitude
-        </p>
-
-        <p class="like">
-            12
-        </p>
-    </div>
-</section>
-                    </section>
+                    
         </main>
 
         <button class=btContact btContact-mobile type=button>
