feat(form):debut du frromulaire

--- a/src/pages/photographer.html
+++ b/src/pages/photographer.html
@@ -22,7 +22,7 @@
             <%- include("../components/aside/aside.html", { like: 297091, price: "300€ / jour" }); %>
 
 
-                <%- include("../components/form-modal/form-modal.html", { nom: "Mimi Keel" }); %>
+                <%- include("../components/form-modal/form-modal.html", { name: "Mimi Keel" }); %>
 </body>
 
 </html>
