feat(lightbox): Ajout des fleches clavier pour changer de media

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,6 +8,7 @@
     <title>FishEye</title>
     <meta name="description"
         content="Site de photographes freelances avec quelques exemples de leur médias, photographies et vidéos">
+    <link rel="icon" href="./img/logo/logo.svg" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
@@ -16,7 +17,6 @@
 </head>
 
 <body>
-
 </body>
 
 </html>
