--- a/www/photographer.html
+++ b/www/photographer.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fisheye - photographe</title>
+    <link rel="icon" href="./img/logo/logo.svg" />
     <meta name="description" content="Présentation des travaux du photographe sélectionné">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css" />
     <link rel="stylesheet" href="css/index.css" type="text/css">
@@ -15,8 +16,6 @@
 </head>
 
 <body>
-
-
 </body>
 
 </html>
